--- a/wedding-rsvp/app/requirements.txt
+++ b/wedding-rsvp/app/requirements.txt
@@ -1,7 +1,8 @@
-fastapi==0.115.12
+fastapi==0.110.2
+uvicorn==0.29.0
+gunicorn==21.2.0
 pytest==7.4.2
-uvicorn==0.23.2
-pydantic==2.4.2
-pydantic-settings==2.0.3
+pydantic==2.6.4
+pydantic-settings==2.2.1
 httpx==0.25.0  # For TestClient
 python-dotenv==1.0.0
