--- a/app/.gitignore
+++ b/app/.gitignore
@@ -68,16 +68,72 @@ Pipfile.lock
 
 # Local dev
 *.sqlite3
+*.db
+*.sqlite3-journal
 
 # OS files
 .DS_Store
 Thumbs.db
+desktop.ini
 
 # Docker
 *.log
 docker-compose.override.yml
+.docker/
 
-# React/Frontend
+# Python
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+*.egg
+*.egg-info/
+*.manifest
+*.spec
+pip-log.txt
+pip-delete-this-directory.txt
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+app/venv/
+
+# Virtual Environment
+venv/
+env/
+ENV/
+.env/
+.venv/
+env.bak/
+venv.bak/
+*venv/
+*env/
+pythonenv*
+.python-version
+app/venv/
+
+# Frontend/React
 node_modules/
 /.pnp
 .pnp.js
@@ -91,3 +147,39 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+.eslintcache
+.stylelintcache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+.node_repl_history
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+*.tsbuildinfo
+next-env.d.ts
+.next/
+out/
+.nuxt
+.nitro
+.cache
+.vercel
+.output
+dist/
+dist-ssr/
+*.local
