--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,13 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r app/backend/requirements.txt
       - name: Run Python tests
+        env:
+          PYTHONPATH: ${{ github.workspace }}
         run: |
-          python -m pytest tests/ -v
+          cd ${{ github.workspace }}
+          python -m pytest app/backend/tests/ -v
       
       # Frontend setup and testing
       - name: Set up Node.js
