--- a/app/.gitignore
+++ b/app/.gitignore
@@ -180,7 +180,48 @@ out/
 .cache
 .vercel
 .output
-dist/
+dist/ git push
+Enumerating objects: 40, done.
+Counting objects: 100% (40/40), done.
+Delta compression using up to 8 threads
+Compressing objects: 100% (26/26), done.
+Writing objects: 100% (27/27), 19.04 KiB | 1.73 MiB/s, done.
+Total 27 (delta 1), reused 0 (delta 0), pack-reused 0
+remote: Resolving deltas: 100% (1/1), completed with 1 local object.
+remote: error: GH013: Repository rule violations found for refs/heads/main.
+remote: 
+remote: - GITHUB PUSH PROTECTION
+remote:   —————————————————————————————————————————
+remote:     Resolve the following violations before pushing again
+remote: 
+remote:     - Push cannot contain secrets
+remote: 
+remote:     
+remote:      (?) Learn how to resolve a blocked push
+remote:      https://docs.github.com/code-security/secret-scanning/working-with-secret-scanning-and-push-protection/working-with-push-protection-from-the-command-line#resolving-a-blocked-push
+remote:     
+remote:     
+remote:       —— Twilio Account String Identifier ——————————————————
+remote:        locations:
+remote:          - commit: 4c0e72e89ceb80041623d83237052cba8c0e4b03
+remote:            path: app/backend/tests/README.md:61
+remote:          - commit: 4c0e72e89ceb80041623d83237052cba8c0e4b03
+remote:            path: app/backend/tests/README.md:81
+remote:          - commit: 4c0e72e89ceb80041623d83237052cba8c0e4b03
+remote:            path: app/backend/tests/README.md:86
+remote:          - commit: 4c0e72e89ceb80041623d83237052cba8c0e4b03
+remote:            path: app/backend/tests/conftest.py:40
+remote:          - commit: 4c0e72e89ceb80041623d83237052cba8c0e4b03
+remote:            path: app/backend/tests/conftest.py:62
+remote:     
+remote:        (?) To push, remove secret from commit(s) or follow this URL to allow the secret.
+remote:        https://github.com/eyalho/weddings-rsvp/security/secret-scanning/unblock-secret/2vwFoRCnv6vQ7VEyj3Xbdfgmh9K
+remote:     
+remote: 
+remote: 
+To github.com:eyalho/weddings-rsvp.git
+ ! [remote rejected] main -> main (push declined due to repository rule violations)
+error: failed to push some refs to 'github.com:eyalho/weddings-rsvp.git'
 dist-ssr/
 *.local
 
