--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,20 +12,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      # Backend setup and testing
+      # Set up both Python and Node.js first
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r app/backend/requirements.txt
-      - name: Run Python tests
-        run: |
-          python -m pytest app/backend/tests/ -v
-      
-      # Frontend setup and testing
+          
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
@@ -33,14 +25,26 @@ jobs:
           cache: 'npm'
           cache-dependency-path: app/frontend/package-lock.json
       
+      # Frontend build must happen before backend tests
       - name: Install frontend dependencies
         working-directory: app/frontend
         run: npm ci
       
-      - name: Run frontend tests
-        working-directory: app/frontend
-        run: npm test
-      
       - name: Build frontend
         working-directory: app/frontend
         run: npm run build
+        
+      # Now run backend tests (which depend on frontend build)
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r app/backend/requirements.txt
+          
+      - name: Run Python tests
+        run: |
+          python -m pytest app/backend/tests/ -v
+      
+      # Finally run frontend tests
+      - name: Run frontend tests
+        working-directory: app/frontend
+        run: npm test
