--- a/app/backend/requirements.txt
+++ b/app/backend/requirements.txt
@@ -6,3 +6,4 @@ pydantic==2.6.4
 pydantic-settings==2.2.1
 httpx==0.25.0  # For TestClient
 python-dotenv==1.0.0
+twilio==8.5.0  # For WhatsApp messaging
