Add database schema and migration setup for RSVP system
- Introduced initial database schema with user_responses and rsvp_guests tables.
- Implemented CRUD operations for managing user responses and RSVP details.
- Added Alembic configuration for database migrations, including initial migration scripts.
- Enhanced webhook processing to save user responses directly to the PostgreSQL database.
- Updated DataStorage service to handle persistence of data to PostgreSQL instead of CSV files.
- Improved logging for database operations and error handling.

--- a/app/backend/requirements.txt
+++ b/app/backend/requirements.txt
@@ -7,3 +7,6 @@ pydantic-settings==2.2.1
 httpx==0.25.0  # For TestClient
 python-dotenv==1.0.0
 twilio==8.5.0  # For WhatsApp messaging
+psycopg2-binary==2.9.9  # For PostgreSQL database
+sqlalchemy==2.0.25  # For ORM
+alembic==1.12.1  # For SQLAlchemy migrations
